# autocleaneeg_pipeline

./: .bashrc  .coverage.macbook14.local.92063.XSksqLvx  .coveragerc  .cursorrules  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  21CFR_Part11_Compliance_White_Paper.md  AUTH0_IMPLEMENTATION_PLAN.md  Autifony_ASSR.py  CHANGELOG.md  CI_IMPLEMENTATION_PLAN.md  CLAUDE.md  CLI_PERFORMANCE_REFACTOR_PLAN.md  DATABASE_ACCESS_LOG_PLAN.md  DEBUG_LOGGING_GUIDE.md  Dockerfile  Dockerfile.production  Dockerfile.review  FDA_21_CFR_Part_11_Compliance_Audit_Report.md  LICENSE  LOCAL_DEVELOPMENT.md  LOGO_STRATEGY.md  MIXIN_REFACTOR_PLAN.md  Makefile  PER_TYPE_THRESHOLDS_SUMMARY.md  PHASE_1_COMPLETION_REPORT.md  PHASE_3_COMPLETION_REPORT.md  PHASE_5_IMPLEMENTATION_SUMMARY.md  PROJECT_STATUS.md  PSD_FMAX_IMPLEMENTATION.md  README.md  REFACTOR_IMPLEMENTATION_PLAN.md  TASK_DISCOVERY_SUMMARY.md  TASK_FILE_FIXES.md  audit_debug_report.html  audit_system_fixes_plan.md  autoclean.db_unqlite_journal  autoclean.sh  (+30 more)
.claude/: settings.local.json
.cursor/: prompts.txt
.cursor/rules/: file_structure.md  pylossless_pipeline.md  task.md
.github/: dependabot.yml
.github/workflows/: benchmark.yml  ci.yml  claude-code-review.yml  claude.yml  dependabot-auto-merge.yml.disabled  dev_test.py  docker-publish.yml  docs.yml  main.yml  release.yml  (+3 more)
AI_Instructions/: loguru.md  pipeline.md  pylossless.md
configs/: autoclean_config.yaml  autoclean_config_hbcd.yaml  autoclean_config_rest_4k.yaml  autoclean_config_spg.yaml  autoclean_mouse.yaml  config.yaml  lossless_config_chirp.yaml  lossless_config_mea.yaml  montages.yaml
data/: pipeline.db
deprecated/: Chirp_HumanData.py  autoclean_catalog.py  autoclean_chanreview.py  autoclean_convert_src.py  basic_usage.py  batch_processing.py  custom_step_function.py  epochs.py  p300_grael4k.py  spg302_resting.py  spg302_stc_analysis.py  spg302_stc_load.py
docs/: CHANGELOG.md  CONTRIBUTING.md  MIGRATION.md  architecture.md  cli-help-backup-20250830_162135.md  cli_reference.md  conf.py  control_sheet.rst  development.rst  directory-backup-resolution.md  getting_started.rst  index.md  index.rst  mintlify.mdx.rst  plugin_system.md  report-chat.mdx  task_generator_wizard.md  tutorial.rst
examples/: README.md  advanced_configuration.py  assr_default_new.py  basic_usage.py  batch_processing.py  batch_run.py  convert_to_set.py  custom_task.py  custom_task_with_json_header.py  ica_caching_example.py  itc_analysis_example.py  simple_resting_task.py  single_file copy.py  single_file.py  spg302_resting_batch.py  start_review.py  startup_review.sh  test_ica_vision.py  user_defined_variables_example.py
scripts/: check_code_quality.py  generate_changelog.py  install_dev_tools.py  migrate_to_mixins.py  uv_tools.py  wavelet_report.py
temp_autoclean/: pipeline.db
tests/: README.md  conftest.py  pytest.ini  test_compatibility.py  test_data_setup.py  test_pipeline.py  test_simple_pipeline.py  utils.py
(+503 files in other folders)
