[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autoclean"
version = "1.0.0"
description = "Automated EEG Processing Pipeline"
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = {file = "LICENSE"}
keywords = ["eeg", "neuroscience", "signal processing", "preprocessing"]
authors = [
    { name = "Gavin Gammoh", email = "gavin.gammoh@cchmc.org" },
    { name = "Ernest Pedapati", email = "ernest.pedapati@cchmc.org" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "numpy>=1.20.0",
    "mne>=1.0.0",
    "rich>=10.0.0",
    "python-dotenv>=0.19.0",
    "pyyaml>=5.1",
    "schema>=0.7.0",
    "mne-bids>=0.10",
    "pandas>=1.3.0",
    "pathlib>=1.0",
    "pybv>=0.6.0",
    "torch>=1.9.0",
    "pyprep>=0.3.0",
    "eeglabio>=0.0.3",
    "autoreject>=0.3.0",
    "python-ulid>=1.0.0",
    "pylossless @ git+https://github.com/lina-usc/pylossless.git",
    "cython>=0.29.0",
    "unqlite>=0.9.3",
    "scipy>=1.7.0",
    "loguru>=0.6.0",
    "matplotlib>=3.4.0",
    "pydantic>=2.0",
    "reportlab>=3.6.0",
]

[project.urls]
Homepage = "https://github.com/cincibrainlab/autoclean_complete"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "pytest-timeout>=2.1.0",
    "black>=22.0",
    "isort>=5.0",
    "mypy>=0.9",
    "flake8>=4.0",
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0"
]

gui = [
    "PyQt5>=5.15.0",
    "mne-qt-browser>=0.3.0",
    "PySide6>=6.5.0",
    "pymupdf>=1.0.0",
    "pyjsonviewer>=0.1.0",
    "reportlab>=3.6.0",
    "textual>=0.11.0",
    "textual-dev>=0.11.0",
    "PyMuPDF"
]

[project.scripts]
autoclean = "autoclean.__main__:main"

[tool.hatch]
version.path = "autoclean/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/autoclean"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=autoclean"
testpaths = [
    "tests",
]

[tool.black]
line-length = 88
target-version = ["py39", "py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
exclude = [
    "autoclean/tasks/TEMPLATE.py",
    ".git",
    ".env",
    "__pycache__",
    "build",
    "dist"
]

[tool.ruff.lint]
per-file-ignores = { "autoclean/step_functions/__init__.py" = ["E402", "F403"], "autoclean/tools/autoclean_review.py" = ["E402"] }
